Realizando alguns ajustes.
